--- a/assets/css/_main.css
+++ b/assets/css/_main.css
@@ -16,6 +16,14 @@ body {
   margin-right: -1rem;
   margin-left: -1rem;
 }
+@media (min-width: 576px) {
+  .w-sm-auto {
+    width: auto !important;
+  }
+  .w-sm-max {
+    width: max-content !important;
+  }
+}
 @media (min-width: 992px) {
   .main-container {
     max-width: 1024px;
@@ -36,7 +44,6 @@ body {
     padding-right: 0;
   }
 }
-
 .size-20 {
   font-size: 20px;
   width: 20px;
