--- a/views/sections/4-config-pause.html
+++ b/views/sections/4-config-pause.html
@@ -170,7 +170,7 @@
               <p class="mb-0 text-secondary">+346647384</p>
             </div>
             <nav class="container padding-x-lg-none mb-4">
-              <ul class="nav nav-custom">
+              <ul class="nav aside-nav">
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="#">
                     <span
@@ -251,7 +251,7 @@
                   </div>
                 </div>
                 <!-- Alerta Fin-->
-                <hr class="nav-sections__divisor custom-margin mb-0" />
+                <hr class="sections-box__divisor custom-margin mb-0" />
               </div>
 
               <!-- Formulario -->
