--- a/views/sections/5-config-pause-alert.html
+++ b/views/sections/5-config-pause-alert.html
@@ -170,7 +170,7 @@
               <p class="mb-0 text-secondary">+346647384</p>
             </div>
             <nav class="container padding-x-lg-none mb-4">
-              <ul class="nav nav-custom">
+              <ul class="nav aside-nav">
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="#">
                     <span
@@ -221,7 +221,7 @@
             <div class="pb-0 rounded-0 rounded-lg-4">
               <div class="config-header">
                 <h1 class="mb-4 h4">Configuración general</h1>
-                <hr class="nav-sections__divisor custom-margin mb-0" />
+                <hr class="sections-box__divisor custom-margin mb-0" />
               </div>
               <!-- Formulario - Radio -->
               <form class="body-2">
@@ -322,7 +322,7 @@
                 <div class="form-footer">
                   <!-- Toast éxito -->
                   <div class="position-relative">
-                    <div class="toast-container active-transcript-toast">
+                    <div class="toast-container custom-toast">
                       <div
                         id="activeTrancriptionsToast"
                         class="toast"
