--- a/views/contacts/2-add.html
+++ b/views/contacts/2-add.html
@@ -158,7 +158,7 @@
               <p class="mb-0 text-secondary">+346647384</p>
             </div>
             <nav class="container padding-x-lg-none mb-4">
-              <ul class="nav nav-custom">
+              <ul class="nav aside-nav">
                 <li class="nav-item">
                   <a class="nav-link" aria-current="page" href="#">
                     <span
