fix: ajuste en modal en ayuda, se combinan las pantallas de ayuda y queda el codigo del boton comentado

--- a/assets/css/_component_button.css
+++ b/assets/css/_component_button.css
@@ -1,6 +1,7 @@
 .btn {
   font-size: var(--font-size-body-1);
   line-height: var(--line-height-body-1);
+  letter-spacing: -0.176px;
 }
 /* Tamaño grande */
 .btn-lg {
