--- a/views/sections/2-help.html
+++ b/views/sections/2-help.html
@@ -201,6 +201,21 @@
             </div>
           </div>
           <div class="col-12 install-section__item">
+            <!-- INICIO: Bloque en el caso de que las transcripciones esten PAUSADAS  -->
+            <!-- <div class="sections-box br-lg-24 mb-3">
+              <h2 class="mb-0 h5">Activar transcripciones</h2>
+              <hr class="sections-box__divisor custom-margin" />
+              <p class="mb-3">
+                Se han pausado todas las transcripciones. Actívalas si quieres
+                volver a recibirlas en tus chats
+              </p>
+              <button class="btn btn-lg btn-outline-primary">
+                Activar transcripciones
+              </button>
+            </div> -->
+            <!-- FIN: Bloque en el caso de que las transcripciones esten PAUSADAS  -->
+
+            <!-- INICIO: Bloque en el caso de que las transcripciones esten ACTIVAS  -->
             <div class="sections-box br-lg-24 mb-3">
               <h2 class="mb-0 h5">Pausar transcripciones</h2>
               <hr class="sections-box__divisor custom-margin" />
@@ -239,7 +254,7 @@
                     <div class="modal-footer border-none">
                       <button
                         type="button"
-                        class="btn btn-lg btn-outline-primary outline-none"
+                        class="btn btn-lg btn-outline-primary outline-none me-1"
                         data-bs-dismiss="modal"
                       >
                         Cancelar
@@ -252,6 +267,7 @@
                 </div>
               </div>
             </div>
+            <!-- FIN: Bloque en el caso de que las transcripciones esten ACTIVAS  -->
           </div>
           <div class="col-12 install-section__item">
             <div class="sections-box br-lg-24 mb-3">
