--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,14 +1,15 @@
 @import '_variables.css';
 @import '_main.css';
-@import '_typography.css';
-@import '_button.css';
-@import '_alert.css';
-@import '_toast.css';
-@import '_spinner.css';
-@import '_header.css';
+@import '_component_typography.css';
+@import '_component_button.css';
+@import '_component_alert.css';
+@import '_component_toast.css';
+@import '_component_spinner.css';
+@import '_component_header.css';
+@import '_component_form.css';
+@import '_component_modal.css';
 @import '_install.css';
 @import '_install-success.css';
 @import '_sections.css';
 @import '_config.css';
 @import '_contacts.css';
-@import '_form.css';
