fix: ajustes en toast, se configura pantalla para mostrar alerta y toast de activar transcripciones

--- a/assets/css/_component_alert.css
+++ b/assets/css/_component_alert.css
@@ -2,4 +2,5 @@
   --bs-alert-bg: var(--info-secondary-bg-color);
   --bs-alert-border: 2px solid var(--info-border-color);
   --bs-alert-border-color: var(--info-border-color);
+  justify-content: space-between;
 }
