--- a/assets/css/_config.css
+++ b/assets/css/_config.css
@@ -14,14 +14,18 @@
   background-color: var(--white);
 }
 .form-bg {
-  padding: 1.5rem;
+  padding: 1.5rem 1rem;
 }
 .config-header {
-  padding: 1.5rem 1.5rem 0;
+  padding: 1rem 1rem 0;
 }
 @media (min-width: 576px) {
   .config-header {
     border-radius: 1.5rem 1.5rem 0 0;
+    padding: 1.5rem 1.5rem 0;
+  }
+  .form-bg {
+    padding: 1.5rem;
   }
 }
 .aside-nav {
@@ -100,5 +104,7 @@
     padding: 0 1.5rem 1.5rem;
     border-radius: 0 0 1.5rem 1.5rem;
     margin-bottom: 1rem;
+    display: flex;
+    justify-content: flex-end;
   }
 }
