--- a/views/config/config-general.html
+++ b/views/config/config-general.html
@@ -207,8 +207,8 @@
           <div class="col-12 col-lg-8 install-section__item mb-lg-3">
             <div class="pb-0 rounded-0 rounded-lg-4">
               <div class="config-header">
-                <h1 class="mb-4 h4">Configuración general</h1>
-                <hr class="sections-box__divisor custom-margin mb-0" />
+                <h1 class="mb-3 h4">Configuración general</h1>
+                <hr class="sections-box__divisor custom-margin mt-4 mb-0" />
               </div>
 
               <!-- Formulario -->
@@ -311,7 +311,7 @@
                   <!--  ====== Toast ====== -->
                   <div class="toast-container-position">
                     <div class="toast-container custom-toast">
-                      <!-- === Toast éxito === -->
+                      <!-- === Toast éxito Config === -->
                       <div
                         id="successConfigToast"
                         class="toast toast-success"
@@ -342,7 +342,7 @@
                           </span>
                         </button>
                       </div>
-                      <!-- === Toast éxito Fin === -->
+                      <!-- === Toast éxito Config Fin === -->
 
                       <!-- === Toast danger === -->
                       <!-- <div
@@ -379,7 +379,7 @@
                     </div>
                   </div>
                   <!-- ====== Toast Fin ====== -->
-                  <div class="pb-4 d-flex box-btn-mobile">
+                  <div class="box-btn-mobile">
                     <button
                       type="button"
                       class="btn btn-primary btn-lg w-100 w-sm-auto ms-sm-auto"
