fix: ajuste de espaciados toast y main

--- a/assets/css/_main.css
+++ b/assets/css/_main.css
@@ -24,11 +24,15 @@ body {
     width: max-content !important;
   }
 }
+.main-container {
+  padding-bottom: 3.5rem;
+}
 @media (min-width: 992px) {
   .main-container {
     max-width: 1024px;
     margin-left: auto;
     margin-right: auto;
+    position: relative;
   }
   .rounded-lg-4 {
     border-radius: 1.5rem !important;
