--- a/views/sections/2-help.html
+++ b/views/sections/2-help.html
@@ -277,7 +277,7 @@
               <button class="btn btn-lg btn-outline-primary">Reconectar</button>
             </div>
           </div>
-          <div class="col-12 install-section__item mb-4 mb-lg-5">
+          <div class="col-12 install-section__item">
             <div class="sections-box br-lg-24 mb-3">
               <h2 class="mb-0 h5">Soporte</h2>
               <hr class="sections-box__divisor custom-margin" />
