--- a/assets/css/_component_toast.css
+++ b/assets/css/_component_toast.css
@@ -12,8 +12,8 @@
 }
 @media (min-width: 992px) {
   .toast-container-position {
-    position: sticky;
-    bottom: -1rem;
+    position: absolute;
+    bottom: 0;
     left: 50%;
     transform: translateX(-50%);
     padding: 0;
