--- a/views/sections/2-help.html
+++ b/views/sections/2-help.html
@@ -202,7 +202,7 @@
           </div>
           <div class="col-12 install-section__item">
             <!-- INICIO: Bloque en el caso de que las transcripciones esten PAUSADAS  -->
-            <!-- <div class="sections-box br-lg-24 mb-3">
+            <div class="sections-box br-lg-24 mb-3 d-none" id="pausedTranscripText">
               <h2 class="mb-0 h5">Activar transcripciones</h2>
               <hr class="sections-box__divisor custom-margin" />
               <p class="mb-3">
@@ -212,11 +212,11 @@
               <button class="btn btn-lg btn-outline-primary">
                 Activar transcripciones
               </button>
-            </div> -->
+            </div>
             <!-- FIN: Bloque en el caso de que las transcripciones esten PAUSADAS  -->
 
             <!-- INICIO: Bloque en el caso de que las transcripciones esten ACTIVAS  -->
-            <div class="sections-box br-lg-24 mb-3">
+            <div class="sections-box br-lg-24 mb-3" id="activeTranscripText">
               <h2 class="mb-0 h5">Pausar transcripciones</h2>
               <hr class="sections-box__divisor custom-margin" />
               <p class="mb-3">
@@ -259,7 +259,7 @@
                       >
                         Cancelar
                       </button>
-                      <button type="button" class="btn btn-lg btn-danger">
+                      <button type="button" class="btn btn-lg btn-danger" onclick="pauseTranscriptions()" data-bs-dismiss="modal">
                         Pausar transcripciones
                       </button>
                     </div>
@@ -301,5 +301,17 @@
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"
     ></script>
+    
+    <!-- Modal Action Pausar Transcripciones script -->
+    <script>
+      const pausedTranscripText = document.getElementById("pausedTranscripText");
+      const activeTranscripText = document.getElementById("activeTranscripText");
+      
+      const pauseTranscriptions = () => {
+        activeTranscripText.classList.add("d-none");
+        pausedTranscripText.classList.remove("d-none");
+        pausedTranscripText.classList.add("d-block");
+      };
+    </script>
   </body>
 </html>
