--- a/assets/css/_component_form.css
+++ b/assets/css/_component_form.css
@@ -59,10 +59,6 @@
   box-shadow: var(--white) 0px 0px 0px 3px inset;
 }
 
-/* .form-check-input:checked[type=checkbox] {
-    --bs-form-check-bg-image: none;
-} */
-
 /* inputs */
 
 .form-control {
@@ -126,4 +122,43 @@
   width: 100%;
   margin-left: -23px;
   margin-top: 0.75rem;
+}
+
+/* Buscador */
+.form-control[type="search"]::-webkit-search-cancel-button {
+  display: none;
+}
+.suggestions {
+  position: absolute;
+  top: 83.8px;
+  background-color: var(--white);
+  width: 100%;
+}
+.suggestions .suggestion-list,
+.suggestions .no-results {
+  margin: 0;
+  padding: 0 0.75rem;
+  border-radius: 0.5rem;
+  border: 1px solid var(--border-primary-color);
+  list-style: none;
+  font-weight: 400;
+  font-size: var(--font-size-body-3);
+  line-height: 14px;
+}
+.suggestions .no-results {
+  padding: 1rem 0.75rem;
+}
+.suggestions .suggestion-list .suggestion-list__item {
+  padding: 1rem 0;
+}
+.suggestions .suggestion-list .suggestion-list__item:hover {
+    cursor: pointer;
+  }
+@media (min-width: 992px) {
+  .suggestions .suggestion-list .suggestion-list__item {
+    padding: 0.75rem 0;
+  }
+}
+.suggestions .suggestion-list .suggestion-list__item:not(:last-child) {
+  box-shadow: 0 1px 1px -1px var(--border-primary-color);
 }
